kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: ghcr.io/sebastianxjavier/hello-world:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "500Mi"
      imagePullSecrets:
      - name: github-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-node-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - helloworld.sewa.cl
  rules:
  - host: helloworld.sewa.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-node-service
            port:
              number: 80
